--- a/game.css
+++ b/game.css
@@ -4,6 +4,9 @@
     margin-left: auto;
     margin-right: auto;
     width: 70%;
+    -webkit-user-select: none;
+    -moz-user-select:none;
+    user-select:none;
 }
 #menu
 {
@@ -22,8 +25,8 @@
     border: 1px solid black;
     width: 2em;
     height: 2em;
-    -webkit-transition: all 0.5s linear;
-    transition: all 0.5s linear;
+    -webkit-transition: all 0.15s linear;
+    transition: all 0.15s linear;
 }
 .selected
 {
