--- a/game.css
+++ b/game.css
@@ -29,7 +29,7 @@
     font-size:25px;
     width: 2em;
     height: 2em;
-    
+    cursor: pointer;
     transition: all 0.15s linear;
     -webkit-transition: all 0.15s linear;
     -o-transition: all 0.15s linear;
