--- a/game.css
+++ b/game.css
@@ -22,6 +22,7 @@
 }
 .card
 {
+    background-blend-mode: multiply,normal;
     font-family: 'Helvetica';
     /*background-image: url('images/black.png');*/
     display: table-cell;
@@ -29,6 +30,7 @@
     font-size:25px;
     width: 2em;
     height: 2em;
+    font-size: 3em;
     cursor: pointer;
     transition: all 0.15s linear;
     -webkit-transition: all 0.15s linear;
@@ -39,6 +41,21 @@
     color:rgba(0,0,0,0);
     border: 2px solid black;
     border-radius: 10px;
+    background-image: 
+    repeating-linear-gradient(
+      45deg,
+      red,
+      red 10px,
+      white 10px,
+      white 20px /* determines size */
+    ),
+     repeating-linear-gradient(
+      135deg,
+      blue,
+      blue 10px,
+      white 10px,
+      white 20px /* determines size */
+    );
 }
 .selected
 {
@@ -50,8 +67,10 @@
 }
 .used
 {
-    color:green;
-    opacity: 0.4;    
+    background-blend-mode: multiply,normal;
+    color: transparent;
+    opacity: 0.1;   
+   
     transform: rotateY(180deg);
     -webkit-transform: rotateY(180deg);
 }
